fix: display overflow
add display overflow

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,6 @@
 
 .calculator-container-header {
   display: flex;
-  font: 'normal normal bold 22px/27px Roboto';
   font-size: 22px;
   justify-content: space-between;
   align-items: baseline;
@@ -69,19 +68,25 @@
 
 .calculator-container-display {
   display: flex;
-  position: relative;
-  z-index: 0;
+  overflow: auto;
   justify-content: flex-end;
   align-items: flex-end;
-  overflow: hidden;
-  font: 'normal normal normal 58px/70px Roboto';
   font-size: 58px;
   background-color: #0D7FA9;
   height: 130px;
   width: 330px;
+  min-width: 330px;
   padding: 0px 27px 0 26px;
   border-radius: 5px;
   opacity: 1;
+}
+
+.calculator-container-display-text {
+  width: 330px;
+  justify-content: flex-end;
+  align-items: flex-end;
+  text-align: end;
+  white-space: nowrap;
 }
 
 .display-history-data {
@@ -89,17 +94,15 @@
 }
 
 .display-history-data p {
-  font: 'normal normal normal 58px/70px Roboto';
   font-size: 5px;
 }
 
 .calculator-container-history {
   display: flex;
-  overflow-y: auto;
   flex-direction: column;
+  overflow: auto;
   justify-content: flex-end;
   align-items: flex-end;
-  font: 'normal normal normal 58px/70px Roboto';
   background-color: #0D7FA9;
   height: 0;
   width: 330px;
@@ -108,7 +111,16 @@
   border-radius: 5px;
   opacity: 1;
   max-height: 610px;
-  transition: height 1s ease;
+  transition: height 2s ease;
+}
+
+.calculator-container-history-text {
+  width: 330px;
+  text-align: end;
+}
+
+.calculator-container-history.show {
+  height: 610px;
 }
 
 .calculator-container-history .calculator-container-history-operation {
@@ -119,9 +131,6 @@
   font-size: 58px;
 }
 
-.calculator-container-history.show {
-  height: 610px;
-}
 
 .calculator-container-display p {
   margin: 0;
